syntax = "proto3";

package tdex_daemon.v2;

import "tdex-daemon/v2/types.proto";
import "tdex/v2/types.proto";
import "google/api/annotations.proto";

/**
 * Service for operators to configure and manage a TDEX daemon
 */
service OperatorService {
  // Derives new addresses from the fee account.
  // This account is only used to deposit LBTC funds to subsidize network fees.
  rpc DeriveFeeAddresses(DeriveFeeAddressesRequest)
    returns (DeriveFeeAddressesResponse) {
      option (google.api.http) = {
        post: "/v2/fee/derive"
        body: "*"
      };
    }

  // Returns the list of all derived addresses for the fee account.
  rpc ListFeeAddresses(ListFeeAddressesRequest)
    returns (ListFeeAddressesResponse) {
      option (google.api.http) = {
        get: "/v2/fee/addresses"
      };
    }

  // Returns the LBTC balance of the fee account.
  rpc GetFeeBalance(GetFeeBalanceRequest) returns (GetFeeBalanceResponse) {
    option (google.api.http) = {
      get: "/v2/fee/balance"
    };
  }

  // Withdraws LBTC funds from the fee account.
  rpc WithdrawFee(WithdrawFeeRequest) returns (WithdrawFeeResponse) {
    option (google.api.http) = {
      post: "/v2/fee/withdraw"
      body: "*"
    };
  }

  // Creates a new market and the related wallet account.
  rpc NewMarket(NewMarketRequest) returns (NewMarketResponse) {
    option (google.api.http) = {
      post: "/v2/market"
      body: "*"
    };
  }

  // Returns info about the given market.
  rpc GetMarketInfo(GetMarketInfoRequest) returns (GetMarketInfoResponse) {
    option (google.api.http) = {
      post: "/v2/market/info"
      body: "*"
    };
  }

  // Derives new addresses for the market.
  rpc DeriveMarketAddresses(DeriveMarketAddressesRequest)
    returns (DeriveMarketAddressesResponse) {
      option (google.api.http) = {
        post: "/v2/market/derive"
        body: "*"
      };
    }

  // Returns the list of all derived addresses for the given market.
  rpc ListMarketAddresses(ListMarketAddressesRequest)
    returns (ListMarketAddressesResponse) {
      option (google.api.http) = {
        post: "/v2/market/addresses"
        body: "*"
      };
    }

  // Makes the given market tradable.
  rpc OpenMarket(OpenMarketRequest) returns (OpenMarketResponse) {
    option (google.api.http) = {
      post: "/v2/market/open"
      body: "*"
    };
  }

  // Makes the given market NOT tradabale.
  rpc CloseMarket(CloseMarketRequest) returns (CloseMarketResponse) {
    option (google.api.http) = {
      post: "/v2/market/close"
      body: "*"
    };
  }

  // Deletes a market.
  rpc DropMarket(DropMarketRequest) returns(DropMarketResponse) {
    option (google.api.http) = {
      post: "/v2/market/drop"
      body: "*"
    };
  }

  // Withdraw funds from the given market.
  rpc WithdrawMarket(WithdrawMarketRequest) returns (WithdrawMarketResponse) {
    option (google.api.http) = {
      post: "/v2/market/withdraw"
      body: "*"
    };
  }

  // Returns a report with volume and collected fees for the given market in
  // the specified time range.
  rpc GetMarketReport(GetMarketReportRequest) returns(GetMarketReportResponse) {
    option (google.api.http) = {
      post: "/v2/market/report"
      body: "*"
    };
  }

  // Changes the Liquidity Provider percentage fee for the given market.
  rpc UpdateMarketPercentageFee(UpdateMarketPercentageFeeRequest)
    returns (UpdateMarketPercentageFeeResponse) {
      option (google.api.http) = {
        post: "/v2/market/fees/percentage"
        body: "*"
      };
    }

  // Changes the Liquidity provider fixed fees for the given market.
  rpc UpdateMarketFixedFee(UpdateMarketFixedFeeRequest)
    returns (UpdateMarketFixedFeeResponse) {
      option (google.api.http) = {
        post: "/v2/market/fees/fixed"
        body: "*"
      };
    }

  // Changes the Liquidity provider asset(s) precision for the given market.
  rpc UpdateMarketAssetsPrecision(UpdateMarketAssetsPrecisionRequest)
    returns (UpdateMarketAssetsPrecisionResponse) {
      option (google.api.http) = {
        post: "/v2/market/precision"
        body: "*"
      };
    }

  // Updates the price for the given market.
  rpc UpdateMarketPrice(UpdateMarketPriceRequest)
    returns (UpdateMarketPriceResponse) {
      option (google.api.http) = {
        post: "/v2/market/price"
        body: "*"
      };
    }

  // Updates the current market making strategy, either using an automated
  // market making formula or a pluggable price feed.
  rpc UpdateMarketStrategy(UpdateMarketStrategyRequest)
      returns (UpdateMarketStrategyResponse) {
        option (google.api.http) = {
          post: "/v2/market/strategy"
          body: "*"
        };
      }

  // Derives new addresses for the fee fragmenter account.
  rpc DeriveFeeFragmenterAddresses(DeriveFeeFragmenterAddressesRequest)
    returns(DeriveFeeFragmenterAddressesResponse) {
      option (google.api.http) = {
        post: "/v2/feefragmenter/derive"
        body: "*"
      };
    }

  // Returns the list of all derived addresses for the fee fragmenter account.
  rpc ListFeeFragmenterAddresses(ListFeeFragmenterAddressesRequest)
    returns(ListFeeFragmenterAddressesResponse) {
      option (google.api.http) = {
        get: "/v2/feefragmenter/addresses"
      };
    }

  // Returns the balance of the fee fragmenter account.
  rpc GetFeeFragmenterBalance(GetFeeFragmenterBalanceRequest)
    returns(GetFeeFragmenterBalanceResponse) {
      option (google.api.http) = {
        get: "/v2/feefragmenter/balance"
      };
    }

  // Splits the funds sent to the fee fragmenter account into multiple
  // fragments that are then deposited to the Fee account.
  rpc FeeFragmenterSplitFunds(FeeFragmenterSplitFundsRequest)
    returns (stream FeeFragmenterSplitFundsResponse) {
      option (google.api.http) = {
        post: "/v2/feefragmenter/split"
        body: "*"
      };
    }

  // Withdraws funds from the fee fragmenter account.
  rpc WithdrawFeeFragmenter(WithdrawFeeFragmenterRequest)
    returns (WithdrawFeeFragmenterResponse) {
      option (google.api.http) = {
        post: "/v2/feefragmenter/withdraw"
        body: "*"
      };
    }

  // Derives new addresses for the market fragmenter account.
  rpc DeriveMarketFragmenterAddresses(DeriveMarketFragmenterAddressesRequest)
    returns(DeriveMarketFragmenterAddressesResponse) {
      option (google.api.http) = {
        post: "/v2/marketfragmenter/derive"
        body: "*"
      };
    }

  // Returns the list of all derived addresses for the market fragmenter account.
  rpc ListMarketFragmenterAddresses(ListMarketFragmenterAddressesRequest)
    returns(ListMarketFragmenterAddressesResponse) {
      option (google.api.http) = {
        get: "/v2/marketfragmenter/addresses"
      };
    }

  // Returns the balance of the market fragmenter account.
  rpc GetMarketFragmenterBalance(GetMarketFragmenterBalanceRequest)
    returns(GetMarketFragmenterBalanceResponse) {
      option (google.api.http) = {
        get: "/v2/marketfragmenter/balance"
      };
    }

  // Splits the funds sent to the market fragmenter account into multiple
  // fragments that are then deposited to the given market.
  rpc MarketFragmenterSplitFunds(MarketFragmenterSplitFundsRequest)
    returns (stream MarketFragmenterSplitFundsResponse) {
      option (google.api.http) = {
        post: "/v2/marketfragmenter/split"
        body: "*"
      };
    }

  // Withdraws funds from the market fragmenter account.
  rpc WithdrawMarketFragmenter(WithdrawMarketFragmenterRequest)
    returns (WithdrawMarketFragmenterResponse) {
      option (google.api.http) = {
        post: "/v2/marketfragmenter/withdraw"
        body: "*"
      };
    }

  // Get info about all markets.
  rpc ListMarkets(ListMarketsRequest) returns (ListMarketsResponse) {
    option (google.api.http) = {
      get: "/v2/markets"
    };
  }

  // Returs all the trades processed by the daemon (ongoing, completed and
  // failed/rejected) or all those filtered by market.
  rpc ListTrades(ListTradesRequest) returns (ListTradesResponse) {
    option (google.api.http) = {
      post: "/v2/trades"
      body: "*"
    };
  }

  // Returns all the utxos, whether unspents, spents or locked.
  rpc ListUtxos(ListUtxosRequest) returns(ListUtxosResponse) {
    option (google.api.http) = {
      post: "/v2/utxos"
      body: "*"
    };
  }

  // Returns the list of all claimed deposits for the given account.
  rpc ListDeposits(ListDepositsRequest) returns(ListDepositsResponse) {
    option (google.api.http) = {
      post: "/v2/deposits"
      body: "*"
    };
  }

  // Returns the list of all withdrawals made for the given account.
  rpc ListWithdrawals(ListWithdrawalsRequest) returns(ListWithdrawalsResponse) {
    option (google.api.http) = {
      post: "/v2/withdrawals"
      body: "*"
    };
  }
}

message DeriveFeeAddressesRequest {
  // The number of addresses to generate.
  int64 num_of_addresses = 1 [jstype = JS_NUMBER];
}
message DeriveFeeAddressesResponse {
  // The list of new confidential addresses.
  repeated string addresses = 1;
}

message ListFeeAddressesRequest {}
message ListFeeAddressesResponse {
  // The list of derived confidential addresses.
  repeated string addresses = 1;
}

message GetFeeBalanceRequest {}
message GetFeeBalanceResponse {
  Balance balance = 1; 
}

message WithdrawFeeRequest {
  // List of receivers.
  repeated TxOutput outputs = 1;
  // The number of millisatoshis per byte that should be paid for network fees.
  uint64 millisats_per_byte = 2;
  // The password that unlocks the internal wallet.
  string password = 3;
}
message WithdrawFeeResponse {
  // The transaction hash in mempool/blockchain.
  string txid = 1;
}

message NewMarketRequest {
  // The asset pair for which creating a new account in the daemon's wallet.
  tdex.v2.Market market = 1;
  // The precision of the base asset.
  uint32 base_asset_precision = 2;
  // The precision of the quote asset.
  uint32 quote_asset_precision = 3;
  // The percentage fee for the market.
  tdex.v2.MarketFee percentage_fee = 4;
  // The fixed fee for the market.
  tdex.v2.MarketFee fixed_fee = 5;
  // Optional human-readable name for the market.
  string name = 6;
  // The market-making strategy to use.
  StrategyType strategy_type = 7;
}
message NewMarketResponse {}

message GetMarketInfoRequest {
  tdex.v2.Market market = 1;
}
message GetMarketInfoResponse {
  MarketInfo info = 1;
}

message DeriveMarketAddressesRequest {
  // The market for which deriving new addresses.
  tdex.v2.Market market = 1;
  // The number of addresses to generate.
  int64 num_of_addresses = 2 [jstype = JS_NUMBER];
}
message DeriveMarketAddressesResponse {
  // The list of new confidential addresses.
  repeated string addresses = 1;
}

message ListMarketAddressesRequest {
  // The Market for which listing all derived addresses.
  tdex.v2.Market market = 1;
}
message ListMarketAddressesResponse {
  // The list of derived confidential addresses.
  repeated string addresses = 1;
}

message OpenMarketRequest {
  // The market to be made tradable.
  tdex.v2.Market market = 1;
}
message OpenMarketResponse {}

message CloseMarketRequest {
  // The market to be made not tradable.
  tdex.v2.Market market = 1;
}
message CloseMarketResponse {}

message DropMarketRequest {
  tdex.v2.Market market = 1;
}
message DropMarketResponse{}

message WithdrawMarketRequest {
  // The market from which funds should be withdrawn.
  tdex.v2.Market market = 1;
  // List of receivers.
  repeated TxOutput outputs = 2;
  // The number of millisatoshis per byte that should be paid for network fees.
  uint64 millisats_per_byte = 3;
  // The password that unlocks the internal wallet.
  string password = 4;
}
message WithdrawMarketResponse {
  // The transaction hash in mempool/blockchain.
  string txid = 1;
}

message GetMarketReportRequest {
  // The market for which returning the report of collected fees.
  tdex.v2.Market market = 1;
  // time_range fetch market report from time range
  TimeRange time_range = 2;
  // used to group volume by time_frame for the specified time_range
  TimeFrame time_frame = 3;
}
message GetMarketReportResponse {
  // MarketReport holds info about volume and collected fees
  MarketReport report = 1;
}

message UpdateMarketPercentageFeeRequest {
  // The market for which updating the percentage fee.
  tdex.v2.Market market = 1;
  // The new percentage fee for base and quote assets expressed in basis point.
  tdex.v2.MarketFee fee = 2;
}
message UpdateMarketPercentageFeeResponse {
  // The market with updated fees.
  tdex.v2.MarketWithFee market_with_fee = 1;
}

message UpdateMarketFixedFeeRequest {
  // The market for which updating the fixed fee.
  tdex.v2.Market market = 1;
  // The new fixed fee for base and quote asset expressed in satoshi.
  tdex.v2.MarketFee fee = 2;
}
message UpdateMarketFixedFeeResponse {
  // The market with updated fees.
  tdex.v2.MarketWithFee market_with_fee = 1;
}

message UpdateMarketAssetsPrecisionRequest {
  // The market for which updating the fixed fee.
  tdex.v2.Market market = 1;
  // The new base asset precision. A negative value is used to skip updating this field.
  int32 base_asset_precision = 2;
  // The new quote asset precision. A negative value is used to skip updating this field.
  int32 quote_asset_precision = 3;
}
message UpdateMarketAssetsPrecisionResponse {}

message UpdateMarketPriceRequest {
  // The arket for which updating the price.
  tdex.v2.Market market = 1;
  // The new price for base and quote asset.
  tdex.v2.Price price = 2;
}
message UpdateMarketPriceResponse {}

message UpdateMarketStrategyRequest {
  // The market for which changing the strategy.
  tdex.v2.Market market = 1;
  // The new making strategy to use.
  StrategyType strategy_type = 2;
  // The JSON string representing additional metadata about the new strategy.
  string metadata = 3;
}
message UpdateMarketStrategyResponse {}

message DeriveFeeFragmenterAddressesRequest {
  int64 num_of_addresses = 1 [jstype = JS_NUMBER];
}
message DeriveFeeFragmenterAddressesResponse {
  repeated string addresses = 1;
}

message ListFeeFragmenterAddressesRequest {}
message ListFeeFragmenterAddressesResponse {
  repeated string addresses = 1;
}

message GetFeeFragmenterBalanceRequest {}
message GetFeeFragmenterBalanceResponse {
  // Account balance grouped by asset.
  map<string, Balance> balance = 1;
}

message FeeFragmenterSplitFundsRequest {
  // The max number of fragments the fragmenter can generate when splitting
  // its funds.
  uint32 max_fragments = 1;
  uint64 millisats_per_byte = 2;
}
message FeeFragmenterSplitFundsResponse {
  // A sequence of string messages returned during the process.
  string message = 1;
}

message WithdrawFeeFragmenterRequest {
  // List of receivers.
  repeated TxOutput outputs = 1;
  // The number of millisatoshis per byte that should be paid for network fees.
  uint64 millisats_per_byte = 2;
  // The password that unlocks the internal wallet.
  string password = 3;
}
message WithdrawFeeFragmenterResponse {
  string txid = 1;
}

message DeriveMarketFragmenterAddressesRequest{
  int64 num_of_addresses = 1 [jstype = JS_NUMBER];
}
message DeriveMarketFragmenterAddressesResponse {
  repeated string addresses = 1;
}

message ListMarketFragmenterAddressesRequest{}
message ListMarketFragmenterAddressesResponse {
  repeated string addresses = 1;
}

message GetMarketFragmenterBalanceRequest {}
message GetMarketFragmenterBalanceResponse {
  // Account balance grouped by asset
  map<string, Balance> balance = 1;
}

message MarketFragmenterSplitFundsRequest {
  // The market to which to deposit the fragmented funds owned by the market
  // fragmenter.
  tdex.v2.Market market = 1;
  uint64 millisats_per_byte = 2;
}
message MarketFragmenterSplitFundsResponse {
  // A sequence of string messages returned during the process.
  string message = 1;
}

message WithdrawMarketFragmenterRequest {
  // List of receivers.
  repeated TxOutput outputs = 1;
  // The number of millisatoshis per byte that should be paid for network fees.
  uint64 millisats_per_byte = 2;
  // The password that unlocks the internal wallet.
  string password = 3;
}
message WithdrawMarketFragmenterResponse {
  string txid = 1;
}

message ListMarketsRequest {}
message ListMarketsResponse {
  // The list of info about all the created markets.
  repeated MarketInfo markets = 1;
}

message ListTradesRequest {
  // Market for which listing trades.
  tdex.v2.Market market = 1;
  // The page for a paginated reply.
  Page page = 2;
  // Optional, return also the raw transaction in hex format for each trade.
  bool with_hex = 3;
}
message ListTradesResponse {
  // The list of info about all trades or all trades for a market depending on
  // the request.
  repeated TradeInfo trades = 1;
}

message ListUtxosRequest {
  // Name of the account for which listing utxos.
  string account_name = 1;
  // The page for a paginated reply.
  Page page = 2;
}
message ListUtxosResponse{
  // The list of all spendable utxos.
  repeated UtxoInfo spendable_utxos = 1;
  // The list of all locked utxos.
  repeated UtxoInfo locked_utxos = 2;
}

message ListDepositsRequest{
  // The name of the wallet account for which listing the deposits.
  string account_name = 1;
  // The page for a paginated reply.
  Page page = 2;
}
message ListDepositsResponse{
  // The name of the wallet account.
  string account_name = 1;
  // The list of info about the deposits.
  repeated Transaction deposits = 2;
}

message ListWithdrawalsRequest{
  // The name of the wallet account for which listing the withdrawals.
  string account_name = 1;
  // The page for a paginated reply.
  Page page = 2;
}
message ListWithdrawalsResponse{
  // The name of the wallet account.
  string account_name = 1;
  // The list of info about the withdrawals.
  repeated Transaction withdrawals = 2;
}